FIx partially picture/source align issue

--- a/themes/foodiepro-2.1.8/assets/css/peepso.scss
+++ b/themes/foodiepro-2.1.8/assets/css/peepso.scss
@@ -752,8 +752,10 @@ body {
     padding: 2px;
 }
 
+.ps-widget__members-item source,
 .ps-widget__members-item img {
     vertical-align: middle;
+    display: inline-block;
 }
 
 .ps-widget__members-item>a {
